--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.3",
     "express-sessions": "^1.0.6",
     "handlebars": "^4.7.7",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nopt": "^6.0.0",
     "sequelize": "^6.25.3",
